@@ -267,6 +267,8 @@
 #define XtCGrabAction            "GrabAction"
 #define XtNdetectAliases         "detectAliases"
 #define XtCDetectAliases         "DetectAliases"
+#define XtNdeleteAliasDisplays   "deleteAliasDisplays"
+#define XtCDeleteAliasDisplays   "DeleteAliasDisplays"
 #define XtNalign2dArrays         "align2dArrays"
 #define XtCAlign2dArrays         "Align2dArrays"
 #define XtNexpandRepeatedValues  "expandRepeatedValues"
@@ -448,6 +450,7 @@ struct AppData {
     Cardinal  grab_action_delay;
     String    grab_action;
     Boolean   detect_aliases;
+    Boolean   delete_alias_displays;
     Boolean   align_2d_arrays;
     Boolean   expand_repeated_values;
     Boolean   bump_displays;
